--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.31'
+    ext.dagger2_version = '2.16'
     repositories {
         google()
         jcenter()
